[package]
name = "trace_caller"
version = "0.1.0"
authors = ["Ayush Kumar Mishra <ayushmishra2005@gmail.com>"]
edition = "2018"

description = "Trace the location of caller of a function."
repository = "https://github.com/ayushmishra2005/trace_caller"
readme = "README.md"
keywords = ["trace_caller", "caller", "track", "track_location", "track-source"]
categories = ["Command-line"]
license = "MIT"

[dependencies]
backtrace = "0.3.45"

[lib]
proc-macro = true