[package]
name = "trace_caller_macro"
version = "0.1.0"
authors = ["Ayush Kumar Mishra <ayushmishra2005@gmail.com>"]
edition = "2018"

description = "procedural macro for tracing caller's source location (trace_caller)"
repository = "https://github.com/ayushmishra2005/trace_caller"
readme = "../README.md"
keywords = ["trace_caller", "caller", "track", "track_location", "track-source"]
categories = ["development-tools::debugging", "development-tools", "development-tools::testing"]
license = "MIT"

[lib]
proc-macro = true
